--- a/index.html
+++ b/index.html
@@ -1,12 +1,120 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+
+<head>
     <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
-  </head>
-  <body>
+    <title>Интернет-магазин «Техномарт»</title>
+</head>
+<body>
+    <header class="main-header">
+        <div class="pre-header">
+            <div class="container"> 
+               <a class="header-logo">
+                    <img src="logo.svg" width="100" height="200" alt="Логотип интернет-магазина «Техномарт»">
+                </a>
+                <span class="search-form">Поиск:</span>
+                <a href="#" class="bookmarks-link">Закладки: 0</a>
+                <a href="#" class="basket-link">Корзина: 0</a>
+                <a href="#" class="order-link">Оформить заказ</a>
+            </div>
+          </div>
+          <div class="header-primary">
+            <div class="container">
+                <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+                <p class="header-contacts">
+                    <span class="telephone">+7 (812) 555-05-55</span><br>
+                    г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+                </p>
+                <ul class="user-navigation">
+                  <li class="login-link">Войти</li>
+                  <li class="register-link">Регистрация</li>
+                </ul>
+            </div>       
+            <nav class="site-navigation">
+                <ul>
+                    <li><a href="#">Главная</a></li>
+                    <li><a href="#">Компания</a></li>
+                    <li><a href="catalog.html">Каталог</a></li>
+                    <li><a href="#">Новости</a></li>
+                    <li><a href="#">Спецпредложения</a></li>
+                    <li><a href="#">Доставка</a></li>
+                    <li><a href="#">Контакты</a></li>
+                </ul>
+            </nav>  
+        </div> 
+    </header>
+    <main>
+           <section class="extra-benefits">
+                <h2>Компания "Техномарт"</h2>
+                <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+                <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями: </p>
+                <ul class="delivery-option">
+                    <li>Деловые линии</li>
+                    <li>Автотрейдинг</li>
+                    <li>ЖелДорЭкспедиция</li>
+                </ul>
+                <a class="button" href="#">Подробнее о компании</a>
+            </section>
+            <section class="main-contacts">
+               <h2>Контакты</h2>
+                <p>Вы можете забрать товар сами, заехав в наш офис:</p>
+                <figure class="map-address">
+                  <a href="#">
+                      <img src="map.jpg" width="300" height="200" alt="Офис на карте">
+                  </a>
+                </figure>
+                <a class="button" href="#">Заблудились? Напишите нам!</a>
+            </section>
+    </main>
+    <footer>
+       <div class="pre-footer">
+           <div class="container">
+                <a class="logo">
+                  <img src="logo.svg" width="100" height="200" alt="Логотип интернет-магазина «Техномарт»">
+                </a>
+                <p class="footer-contacts">
+                    г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+                    +7 (812) 555-05-55
+                </p>        
+                <nav class="footer-navigation">
+                    <ul>
+                        <li><a href="#">Компания</a></li>
+                        <li><a href="#">Новости</a></li>
+                        <li><a href="#">Каталог</a></li>
+                        <li><a href="#">Доставка</a></li>
+                        <li><a href="#">Контакты</a></li>
+                        <li><a href="#">Материалы</a></li>
+                        <li><a href="#">Техника</a></li>
+                        <li><a href="#">Инструмент</a></li>
+                        <li><a href="#">Спецпредложения</a></li>
+                    </ul>
+                </nav> 
+            </div>
+        </div>   
+        <div class="footer-primary">
+           <div class="container">  
+                <p class="copyright">
+                    © 2010–2019 Компания «Техномарт» Все права защищены
+                </p>
+                    <ul>
+                        <li><a class="social-button" href="#">Vkontakte</a></li>
+                        <li><a class="social-button" href="#">Facebook</a></li>
+                        <li><a class="social-button" href="#">Instagram</a></li>
+                    </ul>
+                <p> 
+                   Обратная связь: <br>
+                   <a href="#">
+                       mail@htmlacademy.ru
+                    </a>               
+                </p>
+                <p>  Разработано — <br>
+                    <a href="https://htmlacademy.ru/intensive/htmlcss">
+                       htmlacademy.ru
+                    </a>
+                </p>
+            </div> 
+        </div>
+    </footer>
+</body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
-  </body>
 </html>
