--- a/index.html
+++ b/index.html
@@ -21,13 +21,17 @@
           <div class="header-primary">
             <div class="container">
                 <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-                <p class="header-contacts">
-                    <span class="telephone">+7 (812) 555-05-55</span><br>
-                    г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-                </p>
+
+<!--       Сделать 2 абзаца и завернуть в div-->               
+                <div class="header-contacts">
+                    <p class="telephone">+7 (812) 555-05-55</p>
+                    <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+                </div>
+
+<!--        Добавить ссылки-->
                 <ul class="user-navigation">
-                  <li class="login-link">Войти</li>
-                  <li class="register-link">Регистрация</li>
+                  <li class="login-link"><a href="#">Войти</a></li>
+                  <li class="register-link"><a href="#">Регистрация</a></li>
                 </ul>
             </div>       
             <nav class="site-navigation">
@@ -69,26 +73,32 @@
     <footer>
        <div class="pre-footer">
            <div class="container">
-                <a class="logo">
-                  <img src="logo.svg" width="100" height="200" alt="Логотип интернет-магазина «Техномарт»">
-                </a>
-                <p class="footer-contacts">
-                    г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-                    +7 (812) 555-05-55
-                </p>        
-                <nav class="footer-navigation">
+ <!--                Разбить на 2 списка      -->           
+                <div>
+                    <a class="logo">
+                      <img src="logo.svg" width="100" height="200" alt="Логотип интернет-магазина «Техномарт»">
+                    </a>
                     <ul>
                         <li><a href="#">Компания</a></li>
                         <li><a href="#">Новости</a></li>
                         <li><a href="#">Каталог</a></li>
                         <li><a href="#">Доставка</a></li>
                         <li><a href="#">Контакты</a></li>
+                    </ul>>
+                </div>
+                <div>
+                    <!--Сделать 2 абзаца и завернуть в div-->                   
+                    <div class="footer-contacts">
+                        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+                        <p>+7 (812) 555-05-55</p>
+                    </div> 
+                    <ul>
                         <li><a href="#">Материалы</a></li>
                         <li><a href="#">Техника</a></li>
                         <li><a href="#">Инструмент</a></li>
                         <li><a href="#">Спецпредложения</a></li>
                     </ul>
-                </nav> 
+                </div>
             </div>
         </div>   
         <div class="footer-primary">
@@ -102,12 +112,12 @@
                         <li><a class="social-button" href="#">Instagram</a></li>
                     </ul>
                 <p> 
-                   Обратная связь: <br>
+                   Обратная связь: 
                    <a href="#">
                        mail@htmlacademy.ru
                     </a>               
                 </p>
-                <p>  Разработано — <br>
+                <p>  Разработано — 
                     <a href="https://htmlacademy.ru/intensive/htmlcss">
                        htmlacademy.ru
                     </a>
