--- a/index.html
+++ b/index.html
@@ -48,6 +48,106 @@
         </div> 
     </header>
     <main>
+          <section class="main-benefits">
+             <h2 class="visually-hidden">Спецпредложения</h2>
+              <div class="main-benefits-stuff">
+                  <h3>Материалы</h3>
+                  <a href="" class="button">На любой вкус</a>
+              </div>
+              <div class="main-benefits-tool">
+                  <h3>Инструмент</h3>
+                  <a href="" class="button">На все случаи</a>
+              </div>
+              <div class="main-benefits-tech">
+                  <h3>Техника</h3>
+                  <a href="" class="button">Для стройки</a>
+              </div>
+              <div class="main-benefits-slider">
+                  <h3>Дрели</h3>
+                  <b>Соседям на радость!</b>
+                  <a href="#" class="button">Открыть каталог</a>
+              </div>
+              <div class="right-side">
+                  <div class="main-benefits-discount">
+                      <h3>Скидки 50%</h3>
+                      <a href="" class="button">На 350 товаров</a>
+                  </div>
+                  <div class="main-benefits-delivery">
+                      <h3>Доставка</h3>
+                      <a href="" class="button">Бесплатно</a>
+                  </div>
+              </div>              
+          </section>
+          <section class="popular-goods">
+              <h2>Популярные товары:</h2>
+              <a href="#" class="button">Все популярные товары</a>
+              <ul class="catalog-list">
+                  <li class="catalog-item">
+                      <h3 class="catalog-item-title">
+                          Перфоратор BOSCH BFG 9000
+                      </h3>
+                      <div class="catalog-item-image">
+                          <img src="img/product-1.jpg" width="200" height="150" alt="Перфоратор BOSCH BFG 9000">
+                      </div>
+                      <p class="old-price">32500 Р.</p> 
+                      <p class="new-price">25500 Р.</p>
+                  </li>
+                  <li class="catalog-item">
+                      <h3 class="catalog-item-title">
+                          Перфоратор BOSCH BFG 3000
+                      </h3>
+                      <div class="catalog-item-image">
+                          <img src="img/product-2.jpg" width="200" height="150" alt="Перфоратор BOSCH BFG 3000">
+                      </div>
+                      <p class="old-price">22500 Р.</p> 
+                      <p class="new-price">15500 Р.</p>
+                  </li>
+                  <li class="catalog-item">
+                      <h3 class="catalog-item-title">
+                          Перфоратор BOSCH BFG 6000
+                      </h3>
+                      <div class="catalog-item-image">
+                          <img src="img/product-3.jpg" width="200" height="150" alt="Перфоратор BOSCH BFG 6000">
+                      </div>
+                      <p class="old-price">30500 Р.</p> 
+                      <p class="new-price">25500 Р.</p>
+                  </li>
+                  <li class="catalog-item">
+                      <h3 class="catalog-item-title">
+                          Перфоратор BOSCH BFG 2000
+                      </h3>
+                      <div class="catalog-item-image">
+                          <img src="img/product-4.jpg" width="200" height="150" alt="Перфоратор BOSCH BFG 2000">
+                      </div> 
+                      <p class="new-price">12500 Р.</p>
+                  </li>
+              </ul>
+          </section>
+          <section class="popular-manufacturer">
+              <h2>Популярные производители:</h2>
+              <a href="#" class="button">Все производители</a>
+              <ul>
+                  <li><img src="brand.svg" alt="Bosch" width="100" height="200"></li>
+                  <li><img src="brand.svg" alt="Makita" width="100" height="200"></li>
+                  <li><img src="brand.svg" alt="Dewalt" width="100" height="200"></li>
+                  <li><img src="brand.svg" alt="Интерскол" width="100" height="200"></li>
+                  <li><img src="brand.svg" alt="Hitachi" width="100" height="200"></li>
+                  <li><img src="brand.svg" alt="LG" width="100" height="200"></li>
+                  <li><img src="brand.svg" alt="AEG" width="100" height="200"></li>
+                  <li><img src="brand.svg" alt="Metabo" width="100" height="200"></li>
+              </ul>              
+          </section>
+          <section class="main-services">
+              <h2>Сервисы</h2>
+              <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+              <ul>
+                  <li><a href="#">Доставка</a></li>
+                  <li><a href="#">Гарантия</a></li>
+                  <li><a href="#">Кредит</a></li>
+              </ul>
+              <h2>Доставка</h2>
+              <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+          </section>
            <section class="extra-benefits">
                 <h2>Компания "Техномарт"</h2>
                 <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
@@ -84,7 +184,7 @@
                         <li><a href="#">Каталог</a></li>
                         <li><a href="#">Доставка</a></li>
                         <li><a href="#">Контакты</a></li>
-                    </ul>>
+                    </ul>
                 </div>
                 <div>
                     <!--Сделать 2 абзаца и завернуть в div-->                   
