--- a/catalog.html
+++ b/catalog.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="utf-8">
     <title>Купить перфораторы в интернет магазине «Техномарт»</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="main-header">
         <div class="pre-header">
             <div class="container">  
-               <a class="header-logo" href="index.html">
-                    <img src="logo.svg" width="100" height="200" alt="Логотип интернет-магазина «Техномарт»">
+               <a class="header-logo logo" href="index.html">
+                    <img src="img/svg/icon-logo.svg" width="111" height="18" alt="Логотип интернет-магазина «Техномарт»">
                 </a>
                 <span class="search-form">Поиск:</span>
                 <a href="#" class="bookmarks-link">Закладки: 0</a>
@@ -87,7 +88,7 @@
                         Перфоратор BOSCH BFG 3000                
                    </h3>
                    <div class="catalog-item-image">                  
-                        <img src="img/product-1.jpg" width="200" height="150" alt="Перфоратор BOSCH BFG 3000">      
+                        <img src="img/perforator-2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">      
                    </div>                
                     <p class="old-price">22500 Р.</p> 
                     <p class="new-price">15500 Р.</p>                   
@@ -99,7 +100,7 @@
                         Перфоратор BOSCH BFG 6000                
                    </h3>
                    <div class="catalog-item-image">                  
-                        <img src="img/product-2.jpg" width="200" height="150" alt="Перфоратор BOSCH BFG 6000">  
+                        <img src="img/perforator-3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">  
                    </div>                
                     <p class="old-price">30500 Р.</p> 
                     <p class="new-price">25500 Р.</p>                   
@@ -111,7 +112,7 @@
                         Перфоратор BOSCH BFG 2000                
                    </h3>
                    <div class="catalog-item-image">                  
-                        <img src="img/product-3.jpg" width="200" height="150" alt="Перфоратор BOSCH BFG 2000">     
+                        <img src="img/perforator-2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">     
                    </div>                
                     <p class="new-price">12500 Р</p>                   
               </li>
@@ -122,7 +123,7 @@
                         Перфоратор BOSCH BFG 3000                
                    </h3>
                    <div class="catalog-item-image">                  
-                        <img src="img/product-4.jpg" width="200" height="150" alt="Перфоратор BOSCH BFG 3000">                  
+                        <img src="img/perforator-2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">                  
                    </div>                
                     <p class="old-price">22500 Р.</p> 
                     <p class="new-price">15500 Р.</p>                   
@@ -133,7 +134,7 @@
                         Перфоратор BOSCH BFG 6000                
                    </h3>
                    <div class="catalog-item-image">                  
-                        <img src="img/product-5.jpg" width="200" height="150" alt="Перфоратор BOSCH BFG 6000">      
+                        <img src="img/perforator-3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">      
                    </div>                
                     <p class="old-price">30500 Р.</p> 
                     <p class="new-price">25500 Р.</p>                   
@@ -144,7 +145,7 @@
                         Перфоратор BOSCH BFG 2000                
                    </h3>
                    <div class="catalog-item-image">                  
-                        <img src="img/product-6.jpg" width="200" height="150" alt="Перфоратор BOSCH BFG 2000">      
+                        <img src="img/perforator-2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">      
                    </div>                
                     <p class="new-price">12500 Р</p>                   
               </li>
@@ -155,7 +156,7 @@
                         Перфоратор BOSCH BFG 3000                
                    </h3>
                    <div class="catalog-item-image">                  
-                        <img src="img/product-7.jpg" width="200" height="150" alt="Перфоратор BOSCH BFG 3000">      
+                        <img src="img/perforator-2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">      
                    </div>                
                     <p class="old-price">22500 Р.</p> 
                     <p class="new-price">15500 Р.</p>                   
@@ -167,7 +168,7 @@
                         Перфоратор BOSCH BFG 6000                
                    </h3>
                    <div class="catalog-item-image">                  
-                        <img src="img/product-8.jpg" width="200" height="150" alt="Перфоратор BOSCH BFG 6000">      
+                        <img src="img/perforator-3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">      
                    </div>                
                     <p class="old-price">30500 Р.</p> 
                     <p class="new-price">25500 Р.</p>                   
@@ -179,7 +180,7 @@
                         Перфоратор BOSCH BFG 2000                
                    </h3>
                    <div class="catalog-item-image">                  
-                        <img src="img/product-9.jpg" width="200" height="150" alt="Перфоратор BOSCH BFG 2000">      
+                        <img src="img/perforator-2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">      
                    </div>                
                     <p class="new-price">12500 Р</p>                   
               </li>
@@ -205,8 +206,8 @@
            <div class="container">
 <!--                Разбить на 2 списка      -->           
                 <div>
-                    <a class="logo">
-                      <img src="logo.svg" width="100" height="200" alt="Логотип интернет-магазина «Техномарт»">
+                    <a class="footer-logo logo">
+                      <img src="img/svg/icon-logo.svg" width="138" height="23" alt="Логотип интернет-магазина «Техномарт»">
                     </a>
                     <ul>
                         <li><a href="#">Компания</a></li>
