--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="utf-8">
     <title>Интернет-магазин «Техномарт»</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="main-header">
         <div class="pre-header">
             <div class="container"> 
-               <a class="header-logo">
-                    <img src="logo.svg" width="100" height="200" alt="Логотип интернет-магазина «Техномарт»">
+               <a class="header-logo logo">
+                    <img src="img/svg/icon-logo.svg" width="111" height="18" alt="Логотип интернет-магазина «Техномарт»">
                 </a>
                 <span class="search-form">Поиск:</span>
                 <a href="#" class="bookmarks-link">Закладки: 0</a>
@@ -66,6 +67,10 @@
                   <h3>Дрели</h3>
                   <b>Соседям на радость!</b>
                   <a href="#" class="button">Открыть каталог</a>
+                  <div>
+                      <img src="img/slider-1.jpg" width="620" height="266" alt="1 Слайд">
+                      <img src="img/slider-2.jpg" width="620" height="266" alt="2 Слайд">
+                  </div>
               </div>
               <div class="right-side">
                   <div class="main-benefits-discount">
@@ -87,7 +92,7 @@
                           Перфоратор BOSCH BFG 9000
                       </h3>
                       <div class="catalog-item-image">
-                          <img src="img/product-1.jpg" width="200" height="150" alt="Перфоратор BOSCH BFG 9000">
+                          <img src="img/perforator-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
                       </div>
                       <p class="old-price">32500 Р.</p> 
                       <p class="new-price">25500 Р.</p>
@@ -97,7 +102,7 @@
                           Перфоратор BOSCH BFG 3000
                       </h3>
                       <div class="catalog-item-image">
-                          <img src="img/product-2.jpg" width="200" height="150" alt="Перфоратор BOSCH BFG 3000">
+                          <img src="img/perforator-2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                       </div>
                       <p class="old-price">22500 Р.</p> 
                       <p class="new-price">15500 Р.</p>
@@ -107,7 +112,7 @@
                           Перфоратор BOSCH BFG 6000
                       </h3>
                       <div class="catalog-item-image">
-                          <img src="img/product-3.jpg" width="200" height="150" alt="Перфоратор BOSCH BFG 6000">
+                          <img src="img/perforator-3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
                       </div>
                       <p class="old-price">30500 Р.</p> 
                       <p class="new-price">25500 Р.</p>
@@ -117,7 +122,7 @@
                           Перфоратор BOSCH BFG 2000
                       </h3>
                       <div class="catalog-item-image">
-                          <img src="img/product-4.jpg" width="200" height="150" alt="Перфоратор BOSCH BFG 2000">
+                          <img src="img/perforator-2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
                       </div> 
                       <p class="new-price">12500 Р.</p>
                   </li>
@@ -127,14 +132,14 @@
               <h2>Популярные производители:</h2>
               <a href="#" class="button">Все производители</a>
               <ul>
-                  <li><img src="brand.svg" alt="Bosch" width="100" height="200"></li>
-                  <li><img src="brand.svg" alt="Makita" width="100" height="200"></li>
-                  <li><img src="brand.svg" alt="Dewalt" width="100" height="200"></li>
-                  <li><img src="brand.svg" alt="Интерскол" width="100" height="200"></li>
-                  <li><img src="brand.svg" alt="Hitachi" width="100" height="200"></li>
-                  <li><img src="brand.svg" alt="LG" width="100" height="200"></li>
-                  <li><img src="brand.svg" alt="AEG" width="100" height="200"></li>
-                  <li><img src="brand.svg" alt="Metabo" width="100" height="200"></li>
+                  <li><img src="img/brand-bosch.jpg" alt="Bosch" width="126" height="37"></li>
+                  <li><img src="img/brand-makita.jpg" alt="Makita" width="123" height="40"></li>
+                  <li><img src="img/brand-dewalt.jpg" alt="Dewalt" width="146" height="44"></li>
+                  <li><img src="img/brand-interskol.jpg" alt="Интерскол" width="200" height="88"></li>
+                  <li><img src="img/brand-hitachi.jpg" alt="Hitachi" width="169" height="31"></li>
+                  <li><img src="img/brand-lg.jpg" alt="LG" width="121" height="73"></li>
+                  <li><img src="img/brand-aeg.jpg" alt="AEG" width="151" height="96"></li>
+                  <li><img src="img/brand-metabo.jpg" alt="Metabo" width="204" height="69"></li>
               </ul>              
           </section>
           <section class="main-services">
@@ -164,7 +169,7 @@
                 <p>Вы можете забрать товар сами, заехав в наш офис:</p>
                 <figure class="map-address">
                   <a href="#">
-                      <img src="map.jpg" width="300" height="200" alt="Офис на карте">
+                      <img src="img/map.jpg" width="300" height="158" alt="Офис на карте">
                   </a>
                 </figure>
                 <a class="button" href="#">Заблудились? Напишите нам!</a>
@@ -175,8 +180,8 @@
            <div class="container">
  <!--                Разбить на 2 списка      -->           
                 <div>
-                    <a class="logo">
-                      <img src="logo.svg" width="100" height="200" alt="Логотип интернет-магазина «Техномарт»">
+                    <a class="footer-logo logo">
+                      <img src="img/svg/icon-logo.svg" width="138" height="23" alt="Логотип интернет-магазина «Техномарт»">
                     </a>
                     <ul>
                         <li><a href="#">Компания</a></li>
