--- a/index.html
+++ b/index.html
@@ -67,10 +67,7 @@
                   <h3>Дрели</h3>
                   <b>Соседям на радость!</b>
                   <a href="#" class="button">Открыть каталог</a>
-                  <div>
-                      <img src="img/slider-1.jpg" width="620" height="266" alt="1 Слайд">
-                      <img src="img/slider-2.jpg" width="620" height="266" alt="2 Слайд">
-                  </div>
+                 <!-- Здесь будет слайдер -->
               </div>
               <div class="right-side">
                   <div class="main-benefits-discount">
