--- a/catalog.html
+++ b/catalog.html
@@ -145,7 +145,9 @@
                         <img src="img/perforator-2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">      
                    </div>                
                     <p class="old-price">22500 Р.</p> 
-                    <p class="new-price">15500 Р.</p>                   
+                    <p class="new-price">15500 Р.</p>
+                    <button type="button">Купить</button>
+                    <button type="button">В закладки</button>                   
               </li>
                
                  <!--  2 товар            -->                                           
