--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8">
     <title>Купить перфораторы в интернет магазине «Техномарт»</title>
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -273,15 +276,15 @@
       
     </main>
     
-    <footer>
+     <footer class="main-footer">
        <div class="pre-footer">
            <div class="container">
-<!--                Разбить на 2 списка      -->           
+ <!--                Разбить на 2 списка      -->           
                 <div>
                     <a class="footer-logo logo">
                       <img src="img/svg/icon-logo.svg" width="138" height="23" alt="Логотип интернет-магазина «Техномарт»">
                     </a>
-                    <ul>
+                    <ul class="footer-top-menu">
                         <li><a href="#">Компания</a></li>
                         <li><a href="#">Новости</a></li>
                         <li><a href="#">Каталог</a></li>
@@ -295,13 +298,13 @@
                         <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
                         <p>+7 (812) 555-05-55</p>
                     </div> 
-                    <ul>
+                    <ul class="footer-down-menu">
                         <li><a href="#">Материалы</a></li>
                         <li><a href="#">Техника</a></li>
                         <li><a href="#">Инструмент</a></li>
                         <li><a href="#">Спецпредложения</a></li>
                     </ul>
-                </div> 
+                </div>
             </div>
         </div>   
         <div class="footer-primary">
@@ -314,17 +317,19 @@
                         <li><a class="social-button" href="#"><span class="visually-hidden">Facebook</span></a></li>
                         <li><a class="social-button" href="#"><span class="visually-hidden">Instagram</span></a></li>
                     </ul>
-                <p> 
-                   Обратная связь: 
-                   <a href="#">
-                       mail@htmlacademy.ru
-                    </a>               
-                </p>
-                <p>  Разработано — 
-                    <a href="https://htmlacademy.ru/intensive/htmlcss">
-                       htmlacademy.ru
-                    </a>
-                </p>
+                <div class="footer-primary-right">     
+                    <p> 
+                       Обратная связь: 
+                       <a href="#">
+                           mail@htmlacademy.ru
+                        </a>               
+                    </p>
+                    <p>  Разработано — 
+                        <a href="https://htmlacademy.ru/intensive/htmlcss">
+                           htmlacademy.ru
+                        </a>
+                    </p>
+                </div>
             </div> 
         </div>
     </footer>
