--- a/catalog.html
+++ b/catalog.html
@@ -309,9 +309,8 @@
         <section class="description-item">
           <div class="container">
                <h2>Пара слов о перфораторах</h2>
-                <p>
-                    Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне. Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
-                </p>
+                <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.</p>
+                <p>Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
             </div>
         </section>        
     </main>
@@ -391,6 +390,17 @@
             </div> 
         </div>
     </footer>
+    
+     <div class="modal-buy">
+         <div class="modal-buy-top">
+              <p>Товар добавлен в корзину!</p>
+          </div> 
+          <div class="modal-buy-down">
+              <a href="#" class="red-button">Оформить заказ</a>
+              <a href="#" class="white-button">Продолжить покупки</a>              
+          </div>
+          <button class="modal-close" type="button">Закрыть</button>            
+    </div>
 
 </body>
 </html>
