--- a/catalog.html
+++ b/catalog.html
@@ -88,11 +88,21 @@
                     <form action="" method="get" class="filter">
                        <fieldset class="filter-price">
                            <legend>Цена:</legend>
-                           <div class="filter-price-area">
-                               <input type="range" id="price" name="" min="0" max="35000" value="30000" step="1000">
+                           <div class="range-filter">
+                               <div class="range-controls">
+                                    <div class="scale">
+                                         <div class="bar"></div>
+                                    </div>
+                                    <div class="toggle toggle-min"></div>
+                                    <div class="toggle toggle-max"></div>
+                               </div>
+                               <div class="price-controls">
+                                     <label for="min-price" class="visually-hidden">от</label>
+                                     <input name="min-price" id="min-price" class="min-price" type="text" value="0">
+                                     <label for="max-price" class="visually-hidden">до </label>
+                                     <input name="max-price" id="max-price" class="max-price" type="text" value="30000">
+                               </div>
                            </div>
-                           <p class="filter-min-price">0</p>
-                           <p class="filter-max-price">30000</p>
                        </fieldset>
                        <fieldset class="filter-brand">
                             <legend>Производители:</legend>
@@ -145,11 +155,9 @@
                             <li><a href="">По функционалу</a></li>       
                         </ul>
                         <ul class="sorting-options-right">            
-                            <li><a href=""><span class="visually-hidden">По возрастанию</span>
-                                <img src="img/svg/icon-up-dir.svg" width="11" height="10" alt="По возрастанию">
+                            <li><a href="" class="sort-increase"><span class="visually-hidden">По возрастанию</span>
                             </a></li>
-                            <li><a href=""><span class="visually-hidden">По убыванию</span>
-                            <img src="img/svg/icon-down-dir.svg" width="11" height="10" alt="По убыванию">
+                            <li><a href="" class="sort-decrease"><span class="visually-hidden">По убыванию</span>
                             </a></li>              
                         </ul>
                     </div>
