19 доп. задание исправления

--- a/catalog.html
+++ b/catalog.html
@@ -108,24 +108,64 @@
                             <legend>Производители:</legend>
                             <ul>
                                 <li class="filter-option">
-                                    <input type="checkbox" class="visually-hidden ilter-input filter-input-checkbox" name="bosch" id="filter-bosch" checked>
-                                    <label for="filter-bosch">Bosch</label>
+                                    <input type="checkbox" class="visually-hidden filter-input-checkbox" name="bosch" id="filter-bosch" checked>
+                                    <label for="filter-bosch">
+                                        <span class="checkbox checkbox-off">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23"><path fill="#c5c5c5" d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/></svg>
+                                        </span>
+                                        <span class="checkbox checkbox-on">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23"><path fill="#c5c5c5" d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/><path fill="#c5c5c5" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/></svg>    
+                                        </span>
+                                        Bosch
+                                    </label>
                                 </li>
                                 <li class="filter-option">
-                                    <input type="checkbox" class="visually-hidden ilter-input filter-input-checkbox" name="interskol" id="filter-interskol">
-                                    <label for="filter-interskol">Интерскол</label>
+                                    <input type="checkbox" class="visually-hidden filter-input-checkbox" name="interskol" id="filter-interskol">
+                                    <label for="filter-interskol">
+                                        <span class="checkbox checkbox-off">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23"><path fill="#c5c5c5" d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/></svg>
+                                        </span>
+                                        <span class="checkbox checkbox-on">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23"><path fill="#c5c5c5" d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/><path fill="#c5c5c5" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/></svg>    
+                                        </span>
+                                        Интерскол
+                                    </label>
                                 </li>
                                 <li class="filter-option">
-                                    <input type="checkbox" class="visually-hidden ilter-input filter-input-checkbox" name="makita" id="filter-makita" checked>
-                                    <label for="filter-makita">Makita</label>
+                                    <input type="checkbox" class="visually-hidden filter-input-checkbox" name="makita" id="filter-makita" checked>
+                                    <label for="filter-makita">
+                                        <span class="checkbox checkbox-off">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23"><path fill="#c5c5c5" d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/></svg>
+                                        </span>
+                                        <span class="checkbox checkbox-on">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23"><path fill="#c5c5c5" d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/><path fill="#c5c5c5" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/></svg>    
+                                        </span>
+                                        Makita
+                                    </label>
                                 </li>
                                 <li class="filter-option">
-                                    <input type="checkbox" class="visually-hidden ilter-input filter-input-checkbox" name="dewalt" id="filter-dewalt">
-                                    <label for="filter-dewalt">Dewalt</label>
+                                    <input type="checkbox" class="visually-hidden filter-input-checkbox" name="dewalt" id="filter-dewalt">
+                                    <label for="filter-dewalt">
+                                        <span class="checkbox checkbox-off">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23"><path fill="#c5c5c5" d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/></svg>
+                                        </span>
+                                        <span class="checkbox checkbox-on">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23"><path fill="#c5c5c5" d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/><path fill="#c5c5c5" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/></svg>    
+                                        </span>
+                                        Dewalt
+                                    </label>
                                 </li>
                                 <li class="filter-option">
-                                    <input type="checkbox" class="visually-hidden ilter-input filter-input-checkbox" name="hitachi" id="filter-hitachi">
-                                    <label for="filter-hitachi">Hitachi</label>
+                                    <input type="checkbox" class="visually-hidden filter-input-checkbox" name="hitachi" id="filter-hitachi">
+                                    <label for="filter-hitachi">
+                                        <span class="checkbox checkbox-off">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23"><path fill="#c5c5c5" d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/></svg>
+                                        </span>
+                                        <span class="checkbox checkbox-on">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23"><path fill="#c5c5c5" d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/><path fill="#c5c5c5" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/></svg>    
+                                        </span>
+                                        Hitachi
+                                    </label>
                                 </li>
                             </ul>
                         </fieldset>
@@ -133,12 +173,28 @@
                             <legend>Питание:</legend>
                             <ul>
                                 <li class="filter-option">
-                                    <input type="radio" class="visually-hidden filter-input filter-input-radio" name="power-group" value="battery" id="filter-battery" checked>
-                                    <label for="filter-battery">Аккумуляторные</label>
+                                    <input type="radio" class="visually-hidden filter-input-radio" name="power-group" value="battery" id="filter-battery" checked>
+                                    <label for="filter-battery">
+                                        <span class="radio radio-off">
+                                        <svg  xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25"><path fill="#c5c5c5" d="M12.5 4c4.687 0 8.5 3.813 8.5 8.5 0 4.687-3.813 8.5-8.5 8.5C7.813 21 4 17.187 4 12.5 4 7.813 7.813 4 12.5 4m0-4C5.597 0 0 5.597 0 12.5S5.597 25 12.5 25 25 19.403 25 12.5 19.403 0 12.5 0z"/></svg>
+                                        </span>
+                                        <span class="radio radio-on">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25"><path fill="#c5c5c5" d="M12.5 4c4.687 0 8.5 3.813 8.5 8.5 0 4.687-3.813 8.5-8.5 8.5C7.813 21 4 17.187 4 12.5 4 7.813 7.813 4 12.5 4m0-4C5.597 0 0 5.597 0 12.5S5.597 25 12.5 25 25 19.403 25 12.5 19.403 0 12.5 0z"/><circle fill="#c5c5c5" cx="12.5" cy="12.5" r="4.5"/></svg>
+                                        </span>
+                                        Аккумуляторные
+                                    </label>
                                 </li>
                                 <li class="filter-option">
-                                    <input type="radio" class="visually-hidden filter-input filter-input-radio" name="power-group" value="mains" id="filter-mains">
-                                    <label for="filter-mains">Сетевые</label>
+                                    <input type="radio" class="visually-hidden filter-input-radio" name="power-group" value="mains" id="filter-mains">
+                                    <label for="filter-mains">
+                                        <span class="radio radio-off">
+                                        <svg  xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25"><path fill="#c5c5c5" d="M12.5 4c4.687 0 8.5 3.813 8.5 8.5 0 4.687-3.813 8.5-8.5 8.5C7.813 21 4 17.187 4 12.5 4 7.813 7.813 4 12.5 4m0-4C5.597 0 0 5.597 0 12.5S5.597 25 12.5 25 25 19.403 25 12.5 19.403 0 12.5 0z"/></svg>
+                                        </span>
+                                        <span class="radio radio-on">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25"><path fill="#c5c5c5" d="M12.5 4c4.687 0 8.5 3.813 8.5 8.5 0 4.687-3.813 8.5-8.5 8.5C7.813 21 4 17.187 4 12.5 4 7.813 7.813 4 12.5 4m0-4C5.597 0 0 5.597 0 12.5S5.597 25 12.5 25 25 19.403 25 12.5 19.403 0 12.5 0z"/><circle fill="#c5c5c5" cx="12.5" cy="12.5" r="4.5"/></svg>
+                                        </span>
+                                        Сетевые
+                                    </label>                         
                                 </li>
                             </ul>
                         </fieldset>
@@ -166,7 +222,8 @@
                     <h2 class="visually-hidden">Список перфораторов</h2>
                         <ul class="catalog-list">
                           <!--  1 товар           -->                                  
-                          <li class="catalog-item">   
+                          <li class="catalog-item"> 
+                             <div class="flag">новинка</div>  
                               <div class="actions">
                                    <a href="#" class="buy-button">Купить</a>
                                    <a href="#" class="marker-button">В закладки</a>
@@ -181,7 +238,8 @@
                                <p class="item-new-price">15500 Р.</p>  
                           </li>
                           <!--  2 товар            -->                
-                          <li class="catalog-item">  
+                          <li class="catalog-item">
+                             <div class="flag">новинка</div>  
                               <div class="actions">
                                    <a href="#" class="buy-button">Купить</a>
                                    <a href="#" class="marker-button">В закладки</a>
@@ -213,6 +271,7 @@
                           </li>
                           <!--  4 товар            -->
                           <li class="catalog-item">
+                             <div class="flag">новинка</div>
                               <div class="actions">
                                    <a href="#" class="buy-button">Купить</a>
                                    <a href="#" class="marker-button">В закладки</a>
@@ -243,7 +302,8 @@
                                <p class="item-new-price">25500 Р.</p>
                           </li>
                           <!--  6 товар            -->
-                          <li class="catalog-item">   
+                          <li class="catalog-item"> 
+                             <div class="flag">новинка</div>  
                               <div class="actions">
                                    <a href="#" class="buy-button">Купить</a>
                                    <a href="#" class="marker-button">В закладки</a>
@@ -274,7 +334,8 @@
                                <p class="item-new-price">15500 Р.</p>
                           </li>
                           <!--  8 товар            -->
-                          <li class="catalog-item">   
+                          <li class="catalog-item"> 
+                             <div class="flag">новинка</div>  
                               <div class="actions">
                                    <a href="#" class="buy-button">Купить</a>
                                    <a href="#" class="marker-button">В закладки</a>
@@ -289,7 +350,8 @@
                                <p class="item-new-price">25500 Р.</p>
                           </li>
                           <!--  9 товар            -->
-                          <li class="catalog-item">        
+                          <li class="catalog-item">
+                             <div class="flag">новинка</div>        
                               <div class="actions">
                                    <a href="#" class="buy-button">Купить</a>
                                    <a href="#" class="marker-button">В закладки</a>
@@ -305,12 +367,12 @@
                           </li>
                         </ul>
                     </section>
-                    <div class="paginator">
-                        <a href="#1">1</a>
-                        <a href="#2">2</a>
-                        <a href="#3">3</a>
-                        <a href="#next">Следующая</a>
-                    </div>
+                    <ul class="pagination-list">
+                        <li class="pagination-item pagination-item-current"><a>1</a></li>
+                        <li class="pagination-item"><a href="#">2</a></li>
+                        <li class="pagination-item"><a href="#">3</a></li>
+                        <li class="pagination-item"><a href="#">Следующая</a></li>
+                    </ul>
                 </div>
             </div>        
         </div>
