--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="format-detection" content="telephone=no">
     <title>Купить перфораторы в интернет магазине «Техномарт»</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&amp;subset=cyrillic" rel="stylesheet">
@@ -206,12 +207,12 @@
                     <div class="sorting-options">
                         <h2>Сортировка:</h2>
                         <ul class="sorting-options-left">            
-                            <li><a href="">По цене</a></li>
+                            <li class="sorting-left-current"><a>По цене</a></li>
                             <li><a href="">По типу</a></li> 
                             <li><a href="">По функционалу</a></li>       
                         </ul>
                         <ul class="sorting-options-right">            
-                            <li><a href="" class="sort-increase"><span class="visually-hidden">По возрастанию</span>
+                            <li><a class="sort-increase sort-increase-current"><span class="visually-hidden">По возрастанию</span>
                             </a></li>
                             <li><a href="" class="sort-decrease"><span class="visually-hidden">По убыванию</span>
                             </a></li>              
